# lily-tin

./: .gitignore  Build your SFML project with CMake.md  CMakeLists.txt  README.md  build.bat  debug.bat  lily-tin.sublime-workspace  make.bat  run.bat
include/: Ball.h  Game.h  GameObject.h  Paddle.h
src/: Ball.cpp  Ball.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Main.cpp  Paddle.cpp  Paddle.h  Transform.cpp  Transform.h
